--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.12.0",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.11",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
